--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,5 @@
 {
 "build_path":"/Users/benhaj/dev/docu",
-"project_name" : "Lifebutler"
+"project_name" : "Lifebutler",
+"hooks" : [["git", "add", "."],["git", "commit", "-am", "$date"],["git", "push"]]
 }
